UI de modulo login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="password_placeholder">Ingrese su Contraseña</string>
     <string name="remember_me">Recordarme</string>
     <string name="login">Iniciar Sesion</string>
+    <string name="form_error">Error de datos ingresados</string>
+    <string name="server_error">Error al conectarse con el servidor</string>
 </resources>
