--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="form_error">Error de datos ingresados</string>
     <string name="server_error">Error al conectarse con el servidor</string>
     <string name="next_button">Siguiente</string>
+    <string name="start_button">Iniciar</string>
     <string name="finish_button">Regresar al inicio</string>
 </resources>
