implementacion de base de datos con Room configuracion de KSP para que sea compatible con compose implementacion de arquitectura dao para base de datos injeccion de dependencias para servicios de red y permanencia de datos configuracion de contexto global de la aplicacion implementacion de pantalla de splash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="next_button">Siguiente</string>
     <string name="start_button">Iniciar</string>
     <string name="finish_button">Regresar al inicio</string>
+    <string name="title_activity_splash">SplashActivity</string>
+
+    <string name="default_description">image</string>
 </resources>
