--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
 
     <!--    server messages-->
     <string name="form_error">Error de datos ingresados</string>
-    <string name="server_error">Error al conectarse con el servidor</string>
+    <string name="server_error">Error al conectarse, verifica que los datos enviados sean correctos</string>
     <string name="create_user_error">Error en el servidor, es posible que el email enviado ya tenga una cuenta</string>
     <!--    buttons-->
     <string name="next_button">Siguiente</string>
