--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,10 @@
     <string name="recipes">Recetas</string>
     <string name="calendar">Agenda</string>
     <string name="more_info">Informacion Adicional</string>
+    <!--    pet screen-->
+    <string name="without_pets">No se encontraron mascotas</string>
+    <string name="without_pets_description">si quieres aprovechar al máximo nuestra aplicación, es necesario crear como mínimo una mascota</string>
+
     <!--    common use-->
     <string name="name">Nombre</string>
     <string name="lastname">Apellido</string>
@@ -36,7 +40,8 @@
     <string name="start_button">Iniciar</string>
     <string name="cancel">Cancelar</string>
     <string name="finish_button">Regresar al inicio</string>
-    <string name="create_user">Crear</string>
+    <string name="create">Crear</string>
+    <string name="add_pet">Agregar nueva mascota</string>
     <!--default -->
     <string name="default_description">image</string>
 </resources>
