--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="form_error">Error de datos ingresados</string>
     <string name="server_error">Error al conectarse, verifica que los datos enviados sean correctos</string>
     <string name="create_user_error">Error en el servidor, es posible que el email enviado ya tenga una cuenta</string>
+    <string name="create_pet">Felicidades, has creado una nueva mascota</string>
+    <string name="create_pet_error">La creacion ha fallado, revisa los datos enviados</string>
     <!--    buttons-->
     <string name="next_button">Siguiente</string>
     <string name="start_button">Iniciar</string>
